tests/negative/test_expr_addrof_non_ref.orb
fnc main() {
    let i32 x = 1;
    &(x+1);
}